Closed Bug 1744195 Opened 2 years ago Closed 2 years ago

[win] The disabled buttons from import and create new profile windows have hover and can be clicked

Categories

(Core :: Widget, defect)

All
Windows
defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- wontfix
firefox96 --- verified
firefox97 --- verified

People

(Reporter: atrif, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image modal_00.gif

Affected versions

  • 96.0a1 (20211202215058)
  • 95.0 (20211129150630)

Affected platforms

  • Windows10 x64

Steps to reproduce

  1. Open Firefox and Import Wizard or Create a new profile window.
  2. Hover or click on the Back button.

Expected result

  • Back button is not displayed or cannot be hovered/ clicked.

Actual result

  • Back button can be hovered and clicked.

Regression range

Notes

  • Screen recording attached.
  • On Ubuntu 21.04 there is no Back button and on macOS 10.15 the Back button cannot be hovered or clicked.
Has Regression Range: --- → yes
Has STR: --- → yes

Emilio, fyi.

Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1733569

Assignee: nobody → emilio
Component: CSS Parsing and Computation → Widget
Flags: needinfo?(emilio)

This makes sure that the non-native theme and the native theme agree on
what's e.g. disabled.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5cc085b16d94
Centralize XUL state checks in nsNativeTheme::GetContentState. r=mstange
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Comment on attachment 9254297 [details]
Bug 1744195 - Centralize XUL state checks in nsNativeTheme::GetContentState. r=mstange,spohl

Beta/Release Uplift Approval Request

  • User impact if declined: Comment 0
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: commen t0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's not a one-liner but it's a relatively straight-forward patch that makes state checks consistent across native and non-native theme implementations.
  • String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9254297 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9254297 [details]
Bug 1744195 - Centralize XUL state checks in nsNativeTheme::GetContentState. r=mstange,spohl

Approved for 96.0b5

Attachment #9254297 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Verified fixed with Firefox 96.0b5 (20211213210439) and 97.0a1 (20211213214351) on Windows 10x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: