Bug 1744195 - Centralize XUL state checks in nsNativeTheme::GetContentState. r=mstange

This makes sure that the non-native theme and the native theme agree on
what's e.g. disabled.

Differential Revision: https://phabricator.services.mozilla.com/D133195